--- a/elections.html
+++ b/elections.html
@@ -150,8 +150,8 @@
                     target="_blank"
                     >Register to Vote</a
                   >
-                  <a href="#" class="btn btn-outline-primary" target="_blank"
-                    >Check Registration Status (URL TBD)</a
+                  <a href="https://mvic.sos.state.mi.us/voter/index" class="btn btn-outline-primary" target="_blank"
+                    >Check Registration Status</a
                   >
                 </p>
               </div>
@@ -169,7 +169,7 @@
                 <ul>
                   <li>
                     <i class="bi bi-check-circle"></i>
-                    <span>Request an absentee ballot</span>
+                    <span>Request an absentee ballot and check the box for permanent absentee ballot</span>
                   </li>
                   <li>
                     <i class="bi bi-check-circle"></i>
@@ -178,8 +178,8 @@
                   <li>
                     <i class="bi bi-check-circle"></i>
                     <span
-                      >Return your ballot by mail or drop it off at your clerk's
-                      office or a secure drop box</span
+                      >Return your ballot by mail or drop it off at your local clerk's
+                      office, a secure drop box, or at your voting location</span
                     >
                   </li>
                   <li>
@@ -239,7 +239,7 @@
 
               <!-- Voting District Maps Section -->
               <div id="district-maps" class="mb-5">
-                <h3>Voting District Maps</h3>
+                <h3>Voting District</h3>
                 <p>
                   Understanding your voting districts helps you know which
                   candidates and issues you'll vote on. Muskegon County is
@@ -267,6 +267,10 @@
                   <li>
                     <i class="bi bi-check-circle"></i>
                     <span>Local Municipal Districts</span>
+                  </li>
+                                    <li>
+                    <i class="bi bi-check-circle"></i>
+                    <span>Township Districts</span>
                   </li>
                 </ul>
                 <p>
@@ -311,8 +315,8 @@
                   </li>
                 </ul>
                 <p>
-                  <a href="#" class="btn btn-primary" target="_blank"
-                    >View Election Results (County Clerk URL TBD)</a
+                  <a href="https://co.muskegon.mi.us/" class="btn btn-primary" target="_blank"
+                    >View Election Results</a
                   >
                 </p>
               </div>
