--- a/events.html
+++ b/events.html
@@ -99,20 +99,17 @@
             <div class="col-12">
               <div class="alert alert-primary" role="alert">
                 <h4 class="alert-heading">
-                  <i class="bi bi-megaphone"></i> Featured Fundraiser
+                  <i class="bi bi-megaphone"></i> Monthly Member Meeting
                 </h4>
                 <p>
-                  <strong
-                    >Special fundraiser information will be displayed here when
-                    active.</strong
-                  >
+                  <strong>CIO Hall </strong><br />
+                  February 12, 2026<br />
+                  490 W. Weatern Ave.<br />
+                  Muskegon, MI 49440
                 </p>
                 <hr />
                 <p class="mb-0">
-                  This area is reserved for time-sensitive fundraiser
-                  announcements. Check back during campaign seasons and special
-                  events for details on how you can support the Muskegon County
-                  Democratic Party.
+<strong>SAVE THE DATE <br />MAY 1, 2026  <br /> ANNUAL SPRING GALA</strong>
                 </p>
               </div>
             </div>
@@ -192,12 +189,16 @@
                       <i class="bi bi-check-circle"></i>
                       <span>Opportunity to voice your concerns and ideas</span>
                     </li>
+                                        <li>
+                      <i class="bi bi-check-circle"></i>
+                      <span>CIO Hall, 490 W Western Ave, Muskegon , MI 49440</span>
+                    </li>
                   </ul>
                   <p>
                     <a
-                      href="governance.html#agenda"
+                      href="governance.html"
                       class="btn btn-outline-primary"
-                      >View Meeting Agendas</a
+                      >Governance</a
                     >
                   </p>
                 </div>
