--- a/get-involved.html
+++ b/get-involved.html
@@ -116,7 +116,8 @@
                 <p>
                   Becoming a member of the Muskegon County Democratic Party
                   means joining a community of passionate individuals dedicated
-                  to progressive values and positive change.
+                  to progressive values and positive change. Membership is free and as a member you are also joining the Michigan Democratic Party.
+You must be a resident of Muskegon county.
                 </p>
                 <ul>
                   <li>
@@ -149,7 +150,7 @@
               <div id="donate" class="mb-5">
                 <h3>Donate</h3>
                 <p>
-                  Your financial support helps us organize events, support
+                  Your financial support helps us organize local events, support local 
                   Democratic candidates, and amplify our message throughout
                   Muskegon County.
                 </p>
@@ -195,24 +196,31 @@
                   </li>
                 </ul>
                 <p>
-                  Interested in becoming a precinct delegate? Contact us to
-                  learn more about this important role.
+                  Interested in becoming a precinct delegate? Contact us at muskegondems@gmail.com
+and attend monthly meetings to learn more about this important role. Monthly meetings are
+held the 2nd Thursday of each month at the CIO Hall, 490 W Western Ave, Muskegon MI
+49440.
                 </p>
               </div>
 
               <!-- Party Board Section -->
               <div id="board" class="mb-5">
-                <h3>Muskegon County Democratic Party Board</h3>
+                <h3>Muskegon County Democratic Party Officers</h3>
                 <p>
-                  Our party board consists of dedicated Democrats who guide the
-                  strategic direction of our county organization. Board members
-                  are elected by precinct delegates.
+                  Our officers consists of dedicated Democrats who guide the
+                  strategic direction of our county organization. Officers
+                  are elected by county membership.
                 </p>
-                <h4>Current Board Members:</h4>
-                <p><em>Board member information to be added</em></p>
+                <h4>Current Officers:</h4>
+                <p><em>Susan Fabrick, Chair</em></p>
+<p><em>Willie Smith, First Vice Chair</em></p>
+<p><em>Rhonda Aubrey, Second Vice Chair</em></p>
+<p><em>Ellen Beale, Secretary</em></p>
+<p><em>Jeff Witcher, Treasurer</em></p>
+<p><em>Kim Fisher and Ronald Bailey, Sargeants at Arms</em></p>
                 <p>
-                  Interested in serving on the board? Board elections are held
-                  at organizational meetings following each general election.
+                  Interested in serving as an officer? Officer elections are held
+                  at county convention meetings.
                 </p>
               </div>
 
