--- a/governance.html
+++ b/governance.html
@@ -102,7 +102,7 @@
 
               <h4>Transparent Governance</h4>
               <p>
-                We believe in open and transparent governance. All our meeting
+                We believe in open and transparent governance. Meeting
                 agendas, resolutions, and party rules are available to the
                 public.
               </p>
@@ -205,17 +205,17 @@
                       All as a comprehensive solution to ensure healthcare
                       access for all Americans.
                     </p>
-                    <a
+                    <!-- <a
                       href="#"
                       class="btn btn-outline-primary btn-sm"
                       target="_blank"
                       >Read Full Resolution (URL TBD - Huly)</a
-                    >
+                    > -->
                   </div>
                 </div>
 
                 <!-- Existing Resolution Placeholder -->
-                <div class="card mb-3">
+                <!-- <div class="card mb-3">
                   <div class="card-body">
                     <h5 class="card-title">
                       <i class="bi bi-file-earmark-check"></i> Previous
@@ -232,7 +232,7 @@
                       >Read Full Resolution (URL TBD - Huly)</a
                     >
                   </div>
-                </div>
+                </div> -->
 
                 <p class="mt-4">
                   <em
@@ -284,12 +284,12 @@
                   </li>
                 </ul>
 
-                <p class="mt-4">
+                <!-- <p class="mt-4">
                   <a href="#" class="btn btn-primary" target="_blank">
                     <i class="bi bi-download"></i> Download Party Rules (URL TBD
                     - Huly)
                   </a>
-                </p>
+                </p> -->
 
                 <p class="text-muted mt-3">
                   <small
