--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
         >
           <h2>Muskegon Democratic Party</h2>
           <p>Building Democracy Together in Muskegon County</p>
+          
+          <div class="mt-4 mb-4 hero-info">
+            <p class="mb-1"><strong>Meetings:</strong> 2nd Thursday of each month at 6:00 pm<br>CIO Hall, 490 W Western Ave, Muskegon, MI 49440</p>
+            <p class="mb-1"><strong>Office Hours:</strong> Every Friday 1:00-4:00 pm<br>(Expanded hours after March 1, 2026)</p>
+            <p class="mb-0 text-uppercase fw-bold" style="letter-spacing: 1px; color: #ffc107;">Save the Date: 1 May 2026 Spring Gala</p>
+          </div>
+
           <div class="d-flex flex-wrap gap-3 justify-content-center mt-4">
             <a href="get-involved.html#join-us" class="btn btn-primary"
               >Join Us</a
@@ -89,8 +96,8 @@
             >
             <a href="events.html" class="btn btn-primary">Upcoming Events</a>
             <a href="elections.html" class="btn btn-primary">Voting Info</a>
-            <a href="governance.html#agenda" class="btn btn-primary"
-              >Meeting Agendas</a
+            <a href="governance.html" class="btn btn-primary"
+              >Governance</a
             >
           </div>
           <a href="#statement" class="btn-scroll" title="Scroll Down"
@@ -108,8 +115,8 @@
               <h2>Standing Up for Democracy</h2>
               <p class="lead">
                 Muskegon County Democrats are striving for livable wages,
-                affordable health care, stronger schools, safer communities,
-                environmental justice, and fairer elections. We fight for those
+                universal health care, stronger schools, safer communities,
+                environmental justice, and keeping elections fair. We fight for those
                 who will fight for you.
               </p>
             </div>
@@ -310,7 +317,7 @@
                   <i class="bi bi-geo-alt flex-shrink-0"></i>
                   <div>
                     <h3>Location</h3>
-                    <p>Muskegon, MI</p>
+                    <p>Muskegon County Democrats<br />490 W Western Ave.<br />Muskegon, MI 49440</p>
                   </div>
                 </div>
 
@@ -322,7 +329,7 @@
                   <i class="bi bi-envelope flex-shrink-0"></i>
                   <div>
                     <h3>Email</h3>
-                    <p>contact@mkgdems.org</p>
+                    <p>muskegondems@gmail.com</p>
                   </div>
                 </div>
 
@@ -335,18 +342,18 @@
                   <div>
                     <h3>Follow Us</h3>
                     <div class="social-links d-flex mt-2">
-                      <a href="#" title="Twitter/X"
+                      <!-- <a href="#" title="Twitter/X"
                         ><i class="bi bi-twitter-x"></i
-                      ></a>
-                      <a href="#" title="Facebook"
+                      ></a> -->
+                      <a href="https://www.facebook.com/MuskegonDems/" title="Facebook"
                         ><i class="bi bi-facebook"></i
                       ></a>
-                      <a href="#" title="Instagram"
+                      <a href="https://www.instagram.com/muskegoncountydems/" title="Instagram"
                         ><i class="bi bi-instagram"></i
                       ></a>
-                      <a href="#" title="LinkedIn"
+                      <!-- <a href="#" title="LinkedIn"
                         ><i class="bi bi-linkedin"></i
-                      ></a>
+                      ></a> -->
                     </div>
                   </div>
                 </div>
@@ -430,8 +437,8 @@
             <div class="footer-contact pt-3">
               <p>Muskegon County Democratic Party</p>
               <p>Muskegon, MI</p>
-              <p class="mt-3"><strong>Phone:</strong> <span>TBD</span></p>
-              <p><strong>Email:</strong> <span>contact@mkgdems.org</span></p>
+              <p class="mt-3"><strong>Phone:</strong> <span>231 375 7515</span></p>
+              <p><strong>Email:</strong> <span>muskegondems@gmail.com</span></p>
             </div>
             <div class="social-links d-flex mt-4">
               <a href="#" title="Twitter/X"><i class="bi bi-twitter-x"></i></a>
