--- a/events.html
+++ b/events.html
@@ -65,7 +65,7 @@ permalink: "events.html"
       </div>
     </div>
 
-    <div class="row mb-5" data-aos="fade-up" data-aos-delay="200">
+    <!-- <div class="row mb-5" data-aos="fade-up" data-aos-delay="200">
       <div class="col-12">
         <div class="card">
           <div class="card-body">
@@ -90,7 +90,7 @@ permalink: "events.html"
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Monthly Meetings -->
     <div class="row mb-5" data-aos="fade-up" data-aos-delay="300">
